[metadata]
name = cherno1

[options]
packages = cherno1
zip_safe = True
include_package_data = True
install_requires =
    numpy
    numba
    click
setup_requires =
    setuptools
    setuptools_scm

[options.extras_require]
test = ward

[check-manifest]
ignore =
    .pre-commit-config.yaml

[bdist_wheel]
universal = 1

[flake8]
ignore=
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    build

[isort]
line_length=88
